<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mccammon.cale.jeopardyandroid.ClueActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_menu_play"
            android:title="@string/play"
            android:checked="true" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/stats" />
    </group>
</menu>