<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mccammon.cale.jeopardyandroid.PlayFragment">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone" />
    <TextView
        android:id="@+id/categoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/responseView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white_text"
        android:gravity="center"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="16dp"
        android:textSize="22sp"
        android:typeface="serif"/>
    <EditText
        android:id="@+id/answerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_gravity="center"
        android:hint="@string/enter_your_answer"
        android:paddingTop="30dp"
        android:imeOptions="actionDone"/>
    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/submit"/>
    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/skip"/>
    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/helpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/show_answer"/>
</LinearLayout>
